--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-
+/*<blockquote class="imgur-embed-pub" lang="en" data-id="7edFHon"><a href="//imgur.com/7edFHon">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<blockquote class="imgur-embed-pub" lang="en" data-id="h8yB8rp"><a href="//imgur.com/h8yB8rp">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script> */
 /* GLOBAL STYLES
 ======================== */
 
@@ -1147,6 +1148,14 @@ a:visited {
 
 #marsi-meyers-miyashita-card {
  background-image: url("https://learn-verified.s3.amazonaws.com/marsi-meyers-miyashita.jpg");
+}
+
+#mary-umoh-cover {
+ background-image: url(http://i.imgur.com/7edFHon.jpg);
+}
+
+#mary-umoh-card {
+ background-image: url(http://i.imgur.com/zhFh0lO.jpg);
 }
 
 #sarah-lichter-card {
